bluec-tests/tests/invalid/expr_alignof/alignof_expr1.c
int main(void) {
    int i = 5;
    return _Alignof i;
}